--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
                     <span class="logo-text"></span>
                 </div>
                 <div class="footer-text">
-                    <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
-                    <p>Transformando vidas através do autoconhecimento</p>
+                    <P><a href="https://g.co/kgs/o642rg" target="_blank">Endereço: Rua Engenheiro Monlevade, 670 - Centro - jUNDIAÍ </a></P>
+                    <p>&copy; 2017 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
                     <p>CNPJ 27.345.001/0001-24</p>
-                    <p>Desenvolvido por Eduardo Tertuliano - ClickStorm 11 98783-8439</p>
+                    <p>Desenvolvido por Eduardo Tertuliano - ClickStorm <a href="https://wa.me/5511987838439" target="_blank">11 98783-8439</a></p>
                 </div>
             </div>
         </div>
