--- a/html/reiki.html
+++ b/html/reiki.html
@@ -12,15 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
-                    </a>
+                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <span class="logo-text"></span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="../index.html#home" class="nav-link">Início</a></li>
@@ -28,6 +25,7 @@
                     <li><a href="../index.html#services" class="nav-link">Serviços</a></li>
                     <li><a href="../index.html#marcos" class="nav-link">Marcos Eduardo</a></li>
                     <li><a href="../index.html#contact" class="nav-link">Contato</a></li>
+                    <li><a href="https://linktr.ee/marcos_constelar" target="_blank" class="nav-link">Eventos</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -37,6 +35,7 @@
             </div>
         </nav>
     </header>
+
 
     <!-- Service Hero -->
     <section class="service-hero">
@@ -180,17 +179,19 @@
         </div>
     </section>
 
-    <!-- Footer -->
+        <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
                     <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                    <span class="logo-text">Constelar</span>
+                    <span class="logo-text"></span>
                 </div>
                 <div class="footer-text">
                     <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
                     <p>Transformando vidas através do autoconhecimento</p>
+                    <p>CNPJ 27.345.001/0001-24</p>
+                    <p>Desenvolvido por Eduardo Tertuliano - ClickStorm 11 98783-8439</p>
                 </div>
             </div>
         </div>
@@ -199,4 +200,30 @@
     <script src="../js/script.js"></script>
 </body>
 </html>
+
+
+
+        <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <span class="logo-text"></span>
+                </div>
+                <div class="footer-text">
+                    <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
+                    <p>Transformando vidas através do autoconhecimento</p>
+                    <p>CNPJ 27.345.001/0001-24</p>
+                    <p>Desenvolvido por Eduardo Tertuliano - ClickStorm 11 98783-8439</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../js/script.js"></script>
+</body>
+</html>
+
+
 
