--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@
                             <img src="assets/images/social/linktree.png" alt="Linktree" class="social-icon">
                             <span>Linktree</span>
                         </a>
+                        <a href="https://youtube.com/@constelardesenvolvimentohu7350?si=4WpJGHU_dWTsKwcj" target="_blank" class="social-link">
+                            <img src="assets/images/social/youtube.png" alt="YouTube" class="social-icon">
+                            <span>YouTube</span>
+                        </a>
                     </div>
                 </div>
             </div>
