--- a/html/lideranca.html
+++ b/html/lideranca.html
@@ -12,12 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                    <span class="logo-text"></span>
+                    <a href="../index.html">
+                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                        <span class="logo-text">Constelar</span>
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="../index.html#home" class="nav-link">Início</a></li>
@@ -25,7 +28,6 @@
                     <li><a href="../index.html#services" class="nav-link">Serviços</a></li>
                     <li><a href="../index.html#marcos" class="nav-link">Marcos Eduardo</a></li>
                     <li><a href="../index.html#contact" class="nav-link">Contato</a></li>
-                    <li><a href="https://linktr.ee/marcos_constelar" target="_blank" class="nav-link">Eventos</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -35,7 +37,6 @@
             </div>
         </nav>
     </header>
-
 
     <!-- Service Hero -->
     <section class="service-hero">
@@ -224,19 +225,17 @@
         </div>
     </section>
 
-        <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
                     <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                    <span class="logo-text"></span>
+                    <span class="logo-text">Constelar</span>
                 </div>
                 <div class="footer-text">
                     <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
                     <p>Transformando vidas através do autoconhecimento</p>
-                    <p>CNPJ 27.345.001/0001-24</p>
-                    <p>Desenvolvido por Eduardo Tertuliano - ClickStorm 11 98783-8439</p>
                 </div>
             </div>
         </div>
@@ -245,30 +244,4 @@
     <script src="../js/script.js"></script>
 </body>
 </html>
-
-
-
-        <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                    <span class="logo-text"></span>
-                </div>
-                <div class="footer-text">
-                    <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
-                    <p>Transformando vidas através do autoconhecimento</p>
-                    <p>CNPJ 27.345.001/0001-24</p>
-                    <p>Desenvolvido por Eduardo Tertuliano - ClickStorm 11 98783-8439</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script src="../js/script.js"></script>
-</body>
-</html>
-
-
 
