--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="services-grid">
                 <!-- Service 1: Curso de Reiki -->
                 <div class="service-card" data-service="reiki">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/reiki.jpg" alt="Reiki"></div>
                     <h3 class="service-title">Curso de Reiki</h3>
                     <p class="service-description">Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.</p>
                     <a href="html/reiki.html" class="service-link">Saiba Mais</a>
@@ -136,7 +136,7 @@
 
                 <!-- Service 2: FreshBiz Game -->
                 <div class="service-card" data-service="freshbiz">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/freshbiz.jpg" alt="FreshBiz Game"></div>
                     <h3 class="service-title">Experiência FreshBiz Game</h3>
                     <p class="service-description">Simulação multidimensional de negócios que desenvolve competências empresariais.</p>
                     <a href="html/freshbiz.html" class="service-link">Saiba Mais</a>
@@ -145,7 +145,7 @@
 
                 <!-- Service 3: Liderança -->
                 <div class="service-card" data-service="lideranca">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/lideranca.jpg" alt="Liderança"></div>
                     <h3 class="service-title">Liderança para Novos Líderes</h3>
                     <p class="service-description">Programa completo de desenvolvimento de competências de liderança.</p>
                     <a href="html/lideranca.html" class="service-link">Saiba Mais</a>
@@ -154,7 +154,7 @@
 
                 <!-- Service 4: Mandala Terapêutica -->
                 <div class="service-card" data-service="mandala">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/mandala.jpg" alt="Mandala Terapêutica"></div>
                     <h3 class="service-title">Mandala Terapêutica Dragonlight</h3>
                     <p class="service-description">Terapia através da criação e interpretação de mandalas sagradas.</p>
                     <a href="html/mandala.html" class="service-link">Saiba Mais</a>
@@ -163,7 +163,7 @@
 
                 <!-- Service 5: Jornada da Alma -->
                 <div class="service-card" data-service="jornada">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/jornada.jpg" alt="Jornada da Alma"></div>
                     <h3 class="service-title">Jornada da Alma - Jogo Maha Lilah</h3>
                     <p class="service-description">Experiência online de autoconhecimento através do jogo Maha Lilah.</p>
                     <a href="html/jornada.html" class="service-link">Saiba Mais</a>
@@ -172,7 +172,7 @@
 
                 <!-- Service 6: Perfil Comportamental -->
                 <div class="service-card" data-service="disc">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/disc.jpg" alt="Perfil Comportamental DISC"></div>
                     <h3 class="service-title">Perfil Comportamental DISC</h3>
                     <p class="service-description">Análise completa do seu perfil comportamental através da metodologia DISC.</p>
                     <a href="html/disc.html" class="service-link">Saiba Mais</a>
@@ -181,7 +181,7 @@
 
                 <!-- Service 7: Dragon Coaching -->
                 <div class="service-card" data-service="dragon">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/dragon.png" alt="Dragon Coaching"></div>
                     <h3 class="service-title">Dragon Coaching</h3>
                     <p class="service-description">Concrie a sua vida através do poderoso método Dragon Coaching.</p>
                     <a href="html/dragon.html" class="service-link">Saiba Mais</a>
@@ -190,7 +190,7 @@
 
                 <!-- Service 8: Astrologia -->
                 <div class="service-card" data-service="astrologia">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/astrologia.jpg" alt="Astrologia"></div>
                     <h3 class="service-title">Astrologia</h3>
                     <p class="service-description">Mergulho interior baseado na sua data, hora e local de nascimento.</p>
                     <a href="html/astrologia.html" class="service-link">Saiba Mais</a>
@@ -199,7 +199,7 @@
 
                 <!-- Service 9: Mapa Natal -->
                 <div class="service-card" data-service="mapa">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/mapa.jpg" alt="Mapa Natal"></div>
                     <h3 class="service-title">Mapa Natal</h3>
                     <p class="service-description">Análise completa da sua personalidade através do mapa astral.</p>
                     <a href="html/mapa.html" class="service-link">Saiba Mais</a>
@@ -208,7 +208,7 @@
 
                 <!-- Service 10: Revolução Solar -->
                 <div class="service-card" data-service="revolucao">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/revolucao.jpg" alt="Revolução Solar"></div>
                     <h3 class="service-title">Revolução Solar e Tendências Anuais</h3>
                     <p class="service-description">Análise dos potenciais e desafios do seu ano pessoal.</p>
                     <a href="html/revolucao.html" class="service-link">Saiba Mais</a>
@@ -217,7 +217,7 @@
 
                 <!-- Service 11: Análise Vocacional -->
                 <div class="service-card" data-service="vocacional">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/vocacional.jpg" alt="Análise Vocacional Astrológica"></div>
                     <h3 class="service-title">Análise Vocacional Astrológica</h3>
                     <p class="service-description">Descubra sua vocação através da astrologia vocacional.</p>
                     <a href="html/vocacional.html" class="service-link">Saiba Mais</a>
@@ -226,7 +226,7 @@
 
                 <!-- Service 12: Jogo da Transformação -->
                 <div class="service-card" data-service="transformacao">
-                    <div class="service-icon"></div>
+                    <div class="service-icon"><img src="assets/images/transformacao.jpg" alt="Jogo da Transformação"></div>
                     <h3 class="service-title">Jogo da Transformação</h3>
                     <p class="service-description">Instrumento de autoconhecimento que mostra o caminho para seus propósitos.</p>
                     <a href="html/transformacao.html" class="service-link">Saiba Mais</a>
