--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Constelar Desenvolvimento Humano - Autoconhecimento e transformação através de metodologias ativas, coaching e jogos de desenvolvimento pessoal.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fixes.css">
+    <link rel="stylesheet" href="css/responsive-improvements.css">
 
 </head>
 <body>
