--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Constelar Desenvolvimento Humano - Autoconhecimento e transformação através de metodologias ativas, coaching e jogos de desenvolvimento pessoal.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fixes.css">
+    <link rel="stylesheet" href="css/whatsapp-widget.css">
 
 </head>
 <body>
@@ -371,5 +372,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/whatsapp-widget.js"></script>
 </body>
 </html>
