--- a/html/dragon.html
+++ b/html/dragon.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Concrie a sua vida através do poderoso método Dragon Coaching com a Constelar.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
+    <link rel="stylesheet" href="../css/whatsapp-widget.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -286,6 +287,7 @@
     </footer>
 
     <script src="../js/script.js"></script>
+    <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
 
