--- a/index.html
+++ b/index.html
@@ -225,11 +225,54 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <div class="transformation-visual">
-                            <div class="circle circle-1"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-3"></div>
+                    <div class="games-slider">
+                        <div class="slider-container">
+                            <div class="slide active">
+                                <img src="assets/images/freshbiz_game.jpg" alt="FreshBiz Game">
+                                <div class="slide-caption">FreshBiz Game</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/jogo_maha_lilah.jpg" alt="Jogo Maha Lilah">
+                                <div class="slide-caption">Jogo Maha Lilah</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/transformacao.jpg" alt="Jogo da Transformação">
+                                <div class="slide-caption">Jogo da Transformação</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/dragon_coaching.jpg" alt="Dragon Coaching">
+                                <div class="slide-caption">Dragon Coaching</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/disc.jpg" alt="Perfil DISC">
+                                <div class="slide-caption">Perfil DISC</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/reiki.jpg" alt="Reiki">
+                                <div class="slide-caption">Reiki</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/mandala.jpg" alt="Mandala Terapêutica">
+                                <div class="slide-caption">Mandala Terapêutica</div>
+                            </div>
+                            <div class="slide">
+                                <img src="assets/images/lideranca_novos_lideres.jpg" alt="Liderança">
+                                <div class="slide-caption">Liderança</div>
+                            </div>
+                        </div>
+                        <div class="slider-nav">
+                            <button class="nav-btn prev-btn" onclick="changeSlide(-1)">‹</button>
+                            <button class="nav-btn next-btn" onclick="changeSlide(1)">›</button>
+                        </div>
+                        <div class="slider-dots">
+                            <span class="dot active" onclick="currentSlide(1)"></span>
+                            <span class="dot" onclick="currentSlide(2)"></span>
+                            <span class="dot" onclick="currentSlide(3)"></span>
+                            <span class="dot" onclick="currentSlide(4)"></span>
+                            <span class="dot" onclick="currentSlide(5)"></span>
+                            <span class="dot" onclick="currentSlide(6)"></span>
+                            <span class="dot" onclick="currentSlide(7)"></span>
+                            <span class="dot" onclick="currentSlide(8)"></span>
                         </div>
                     </div>
                 </div>
