--- a/html/astrologia.html
+++ b/html/astrologia.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <ul class="nav-menu">
