--- a/html/freshbiz.html
+++ b/html/freshbiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experiência FreshBiz Game - Constelar</title>
+    <title>Experiência FreshBiz Game</title>
     <meta name="description" content="Simulação multidimensional de negócios que desenvolve competências empresariais através de gamificação.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
@@ -19,8 +19,8 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <span class="logo-text"></span>
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -212,8 +212,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                    <span class="logo-text">Constelar</span>
+                    <img src="../assets/images/logotipo.png" alt="" class="logo">
+                    <span class="logo-text"></span>
                 </div>
                 <div class="footer-text">
                     <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
