--- a/html/mapa.html
+++ b/html/mapa.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa Natal - Constelar</title>
-    <meta name="description" content="Análise completa da sua personalidade através do mapa astral com a Constelar.">
+    <title>Mapa Natal</title>
+    <meta name="description" content="Análise completa da sua personalidade através do mapa astral.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -19,8 +19,8 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <span class="logo-text"></span>
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -263,8 +263,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <span class="logo-text"></span>
                     </div>
                     <p class="footer-description">Desenvolvimento Humano através de metodologias ativas e autoconhecimento.</p>
                 </div>
