--- a/html/reiki.html
+++ b/html/reiki.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki - Constelar</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki com a Constelar.">
+    <title>Curso de Reiki</title>
+    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -19,8 +19,8 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <span class="logo-text"></span>
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -186,8 +186,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                    <span class="logo-text">Constelar</span>
+                    <img src="../assets/images/logotipo.png" alt="" class="logo">
+                    <span class="logo-text"></span>
                 </div>
                 <div class="footer-text">
                     <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
