--- a/html/lideranca.html
+++ b/html/lideranca.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liderança para Novos Líderes</title>
+    <title>Liderança para Novos Líderes - Constelar</title>
     <meta name="description" content="Programa completo de desenvolvimento de competências de liderança através de autoconhecimento e metodologias ativas.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
@@ -19,8 +20,8 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="" class="logo">
-                        <span class="logo-text"></span>
+                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                        <span class="logo-text">Constelar</span>
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -231,8 +232,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="../assets/images/logotipo.png" alt="" class="logo">
-                    <span class="logo-text"></span>
+                    <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <span class="logo-text">Constelar</span>
                 </div>
                 <div class="footer-text">
                     <p>&copy; 2024 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
