--- a/html/vocacional.html
+++ b/html/vocacional.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Análise Vocacional Astrológica</title>
-    <meta name="description" content="Descubra sua vocação através da astrologia vocacional.">
+    <title>Análise Vocacional Astrológica - Constelar</title>
+    <meta name="description" content="Descubra sua vocação através da astrologia vocacional com a Constelar.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -19,8 +20,8 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="" class="logo">
-                        <span class="logo-text"></span>
+                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                        <span class="logo-text">Constelar</span>
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -272,8 +273,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../assets/images/logotipo.png" alt="" class="logo">
-                        <span class="logo-text"></span>
+                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                        <span class="logo-text">Constelar</span>
                     </div>
                     <p class="footer-description">Desenvolvimento Humano através de metodologias ativas e autoconhecimento.</p>
                 </div>
