--- a/html/astrologia.html
+++ b/html/astrologia.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrologia</title>
+    <title>Astrologia - Constelar</title>
     <meta name="description" content="Mergulho interior baseado na sua data, hora e local de nascimento com a Constelar.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
@@ -17,7 +18,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="../assets/images/logotipo.png" alt="" class="logo">
+                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <ul class="nav-menu">
@@ -286,7 +287,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
                         <span class="logo-text">Constelar</span>
                     </div>
                     <p class="footer-description">Desenvolvimento Humano através de metodologias ativas e autoconhecimento.</p>
