--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desenvolvimento Humano</title>
-    <meta name="description" content="Desenvolvimento Humano - Autoconhecimento e transformação através de metodologias ativas, coaching e jogos de desenvolvimento pessoal.">
+    <title>Constelar - Desenvolvimento Humano</title>
+    <meta name="description" content="Constelar Desenvolvimento Humano - Autoconhecimento e transformação através de metodologias ativas, coaching e jogos de desenvolvimento pessoal.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fixes.css">
     <link rel="stylesheet" href="css/whatsapp-widget.css">
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="assets/images/logotipo.png" alt="" class="logo">
+                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <ul class="nav-menu">
@@ -187,12 +187,13 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2 class="section-title">Sobre</h2>
+                    <h2 class="section-title">Sobre a Constelar</h2>
                     <p class="about-description">
                         A Constelar nasceu no ano de 2017 com a missão de levar o autoconhecimento e autodesenvolvimento para dentro da vida de cada ser humano por meio de soluções criativas, metodologias ativas e gamificação atendendo tanto o ambiente corporativo quanto o pessoal.
                     </p>
                     <p class="about-description">
-                    O propósito do Desenvolvimento Humano é inspirar, apoiar e encorajar pessoas e empresas em seus processos de mudança e transformação, tornando-as mais conscientes de suas potencialidades e dos seus desafios para que possam encontrar o seu lugar, essência e propósito.               </p>
+                        O propósito da Constelar Desenvolvimento Humano é inspirar, apoiar e encorajar pessoas e empresas em seus processos de mudança e transformação, tornando-as mais conscientes de suas potencialidades e dos seus desafios para que possam encontrar o seu lugar, essência e propósito.
+                    </p>
                     <div class="excellence-keys">
                         <h3>Chaves da Excelência</h3>
                         <div class="keys-grid">
@@ -382,12 +383,12 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/images/logotipo.png" alt="" class="logo">
+                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <div class="footer-text">
                     <p>CNPJ 27.345.001/0001-24</p>
-                    <p>&copy; 2024 TODOS OS DIREITOS RESERVADOS</p>
+                    <p>&copy; 2017 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
                     <p>Desenvolvido por Eduardo Tertuliano - ClickStorm <a href="https://wa.me/5511987838439">11 98783-8439</a></p>
                 </div>
             </div>
